# model-price-hub

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: price-update.yml
app/: __init__.py  config.py  main.py  scheduler.py
app/api/: confidence.py  prices.py  repository.py  snapshots.py
app/db/: __init__.py  session.py
app/models/: __init__.py  canonical.py  pricing.py
app/pipeline/: __init__.py  runner.py  store.py  validate.py
app/scrapers/: __init__.py  _html.py  aliyun.py  baidu.py  base.py  deepseek.py  kimi.py  litellm_json.py  minimax.py  openrouter.py  ppio.py  registry.py  siliconflow.py  tencent.py  vision_base.py  vision_official.py  zhipu.py
app/web/: index.html
data/: latest.json  overrides.yaml
data/snapshots/: 2026-07-16.json  2026-07-19.json  2026-07-22.json
tests/: conftest.py  test_aliyun.py  test_api.py  test_canonical.py  test_confidence.py  test_deepseek.py  test_litellm.py  test_official_scrapers.py  test_official_scrapers2.py  test_openrouter.py  test_ppio.py  test_siliconflow.py  test_validate.py  test_vision.py
tests/fixtures/: deepseek_en.html  deepseek_zh.html  litellm_sample.json  minimax_body.txt  openrouter_sample.json  ppio_body.txt  siliconflow_body.txt  zhipu_body.txt
